# disposition-stock

./: .gitignore  README.md
.github/workflows/: deploy.yml  update-data.yml
notes/: 00-overview.md  01-rules-attention.md  02-rules-disposition.md  03-data-sources.md  04-strategy-ideas.md  05-broker-sinopac.md
scraper/: pyproject.toml
scraper/src/scraper/: classify.py  dates.py  enrich.py  main.py  source.py
scraper/tests/: test_classify.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/data/: snapshot.json
web/src/: App.vue  main.ts  types.ts
web/src/components/: StockCard.vue  TabBar.vue
web/src/stores/: snapshot.ts
web/src/styles/: main.scss
