[project]
name = "disposition-stock-scraper"
version = "0.1.0"
description = "Scrape Taiwan disposition/attention stocks and produce snapshot.json"
requires-python = ">=3.10"
dependencies = [
    "finlab>=2.0.5",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]
